// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:dropdown-button 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown is-opened show"
  >
    <button
      class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
    >
      <span
        class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown-caret"
      >
        <icon-mock
          class="icon icon-right-arrow-bold"
          icon="right-arrow-bold"
        />
      </span>
    </button>
    <ul
      class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown-menu-root __AMIS_COMPONENT_CLASS_PREFIX__DropDown-menu"
      style="width: 0px;"
    >
      <li
        class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown-button"
      >
        <a
          class=""
        >
          <span>
            按钮
          </span>
        </a>
      </li>
      <li
        class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown-button"
      >
        <a
          class=""
        >
          <span>
            按钮
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Renderer:dropdown-button 2`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown show"
  >
    <button
      class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
    >
      <span
        class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown-caret"
      >
        <icon-mock
          class="icon icon-right-arrow-bold"
          icon="right-arrow-bold"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`Renderer:dropdown-button with block & size 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown __AMIS_COMPONENT_CLASS_PREFIX__DropDown--block"
  >
    <button
      class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--block __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
    >
      下拉菜单
      <span
        class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown-caret"
      >
        <icon-mock
          class="icon icon-right-arrow-bold"
          icon="right-arrow-bold"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`Renderer:dropdown-button with block & size 2`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown"
  >
    <button
      class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-lg"
    >
      下拉菜单
      <span
        class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown-caret"
      >
        <icon-mock
          class="icon icon-right-arrow-bold"
          icon="right-arrow-bold"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`Renderer:dropdown-button with buttons group 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown is-opened"
  >
    <button
      class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
    >
      下拉菜单
      <span
        class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown-caret"
      >
        <icon-mock
          class="icon icon-right-arrow-bold"
          icon="right-arrow-bold"
        />
      </span>
    </button>
    <ul
      class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown-menu-root __AMIS_COMPONENT_CLASS_PREFIX__DropDown-menu"
      style="width: 0px;"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown-menu"
      >
        <li
          class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown-groupTitle"
        >
          <i
            class="fa fa-user m-r-xs fa fa-user"
          />
          <span>
            RD
          </span>
        </li>
        <li
          class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown-button"
        >
          <a
            class=""
          >
            <span>
              前端FE
            </span>
          </a>
        </li>
        <li
          class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown-button"
        >
          <a
            class=""
          >
            <span>
              后端RD
            </span>
          </a>
        </li>
      </div>
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown-menu"
      >
        <li
          class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown-groupTitle"
        >
          <i
            class="fa fa-user m-r-xs fa fa-user"
          />
          <span>
            QA
          </span>
        </li>
        <li
          class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown-button"
        >
          <a
            class=""
          >
            <span>
              测试QA
            </span>
          </a>
        </li>
        <li
          class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown-button is-disabled"
        >
          <a
            class=""
            disabled=""
          >
            <span>
              交付测试DQA
            </span>
          </a>
        </li>
        <li
          class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown-divider"
        />
      </div>
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown-menu"
      >
        <li
          class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown-groupTitle"
        >
          <i
            class="fa fa-user m-r-xs fa fa-user"
          />
          <span>
            Manager
          </span>
        </li>
        <li
          class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown-button"
        >
          <a
            class=""
          >
            <span>
              项目经理PM
            </span>
          </a>
        </li>
      </div>
    </ul>
  </div>
</div>
`;

exports[`Renderer:dropdown-button with closeOnClick & closeOnOutside 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown is-opened"
          >
            <button
              class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            >
              下拉菜单
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown-caret"
              >
                <icon-mock
                  class="icon icon-right-arrow-bold"
                  icon="right-arrow-bold"
                />
              </span>
            </button>
            <ul
              class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown-menu-root __AMIS_COMPONENT_CLASS_PREFIX__DropDown-menu"
              style="width: 0px;"
            >
              <li
                class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown-button"
              >
                <a
                  class=""
                >
                  <span>
                    按钮1
                  </span>
                </a>
              </li>
              <li
                class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown-button"
              >
                <a
                  class=""
                >
                  <span>
                    按钮2
                  </span>
                </a>
              </li>
            </ul>
          </div>
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              outside
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:dropdown-button with hideCaret 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown"
  >
    <button
      class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--link __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
    >
      <i
        class="fa fa-ellipsis-h icon m-r-xs fa fa-ellipsis-h"
      />
      下拉菜单
    </button>
  </div>
</div>
`;

exports[`Renderer:dropdown-button with icon & rightIcon 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown"
  >
    <button
      class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
    >
      <i
        class="fa fa-home icon m-r-xs fa fa-home"
      />
      下拉菜单
      <i
        class="fa fa-ellipsis-v icon m-l-xs fa fa-ellipsis-v"
      />
      <span
        class="__AMIS_COMPONENT_CLASS_PREFIX__DropDown-caret"
      >
        <icon-mock
          class="icon icon-right-arrow-bold"
          icon="right-arrow-bold"
        />
      </span>
    </button>
  </div>
</div>
`;
